# biqtchecker

./: CMakeLists.txt  README.md
include/: IrisAnalyzer.h  IrisQualityAPI.h  PathUtils.h
lib/biqt-iris/include/: BIQTIris.h  ProviderInterface.h
lib/biqt-iris/src/: BIQTIris.cpp  ImageOps.cpp
src/: IrisAnalyzer.cpp  PathUtils.cpp  main.cpp
